Do not relay transfer encoding data